// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <label
    className="sc-ftKnHw hwVEux"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-jtGjJS gUFPbX"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-ebPQXL jelQnB"
    >
      <div
        className="sc-iYsgxs kuCGoA"
      />
    </span>
    <span
      className="sc-bTUVp cAvXMU"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-ftKnHw hwVEux"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-jtGjJS gUFPbX"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-ebPQXL jelQnB"
    >
      <div
        className="sc-iYsgxs kuCGoA"
      />
    </span>
    <span
      className="sc-bTUVp cAvXMU"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-ftKnHw hwVEux"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-jtGjJS gUFPbX"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-ebPQXL jelQnB"
    >
      <div
        className="sc-iYsgxs kuCGoA"
      />
    </span>
    <span
      className="sc-bTUVp cAvXMU"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-ftKnHw hwVEux"
>
  <input
    checked={true}
    className="sc-jtGjJS gUFPbX"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-ebPQXL jelQnB"
  >
    <div
      className="sc-iYsgxs kuCGoA"
    />
  </span>
  <span
    className="sc-bTUVp cAvXMU"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-ftKnHw hwVEux"
>
  <input
    className="sc-jtGjJS gUFPbX"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-ebPQXL jelQnB"
  >
    <div
      className="sc-iYsgxs kuCGoA"
    />
  </span>
  <span
    className="sc-bTUVp cAvXMU"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <label
      className="sc-ftKnHw hwVEux"
      htmlFor="button1"
    >
      <input
        className="sc-jtGjJS gUFPbX"
        id="button1"
        name="button"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-ebPQXL jelQnB"
      >
        <div
          className="sc-iYsgxs kuCGoA"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <label
      className="sc-ftKnHw hwVEux"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-jtGjJS gUFPbX"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-ebPQXL jelQnB"
      >
        <div
          className="sc-iYsgxs kuCGoA"
        />
      </span>
      <span
        className="sc-bTUVp cAvXMU"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-ftKnHw hwVEux"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-jtGjJS gUFPbX"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-ebPQXL jelQnB"
      >
        <div
          className="sc-iYsgxs kuCGoA"
        />
      </span>
      <span
        className="sc-bTUVp cAvXMU"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-ftKnHw hwVEux"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-jtGjJS gUFPbX"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-ebPQXL jelQnB"
      >
        <div
          className="sc-iYsgxs kuCGoA"
        />
      </span>
      <span
        className="sc-bTUVp cAvXMU"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
